sjeng/use_undefined_identifier/c0/display_board
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/display_board/src/utils.c:809:21: error: use of undeclared identifier 'off_429690'
memcpy( piece_rep, &off_429690, sizeof( piece_rep)); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/display_board/src/obj/utils.o] Error 1
